layout : fix footer spacing

--- a/css/footer.css
+++ b/css/footer.css
@@ -5,6 +5,7 @@ footer {
   grid-template-columns: 10% repeat(4,20%) 10%;
   grid-template-rows: repeat(4,25%);
   background: rgb(25,25,25);
+  justify-items: center;
 }
 
 footer section {
@@ -14,6 +15,7 @@ footer section {
 }
 
 footer section h2 {
+  width: 128px;
   padding: 10px 0;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
